--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,6 +63,19 @@
         <item name="android:textColor">@color/calendar_background</item>
     </style>
 
+    <style name="ButtonStyleRequestWorkEdit" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+        <item name="elevation">4dp</item>
+        <item name="cornerRadius">8dp</item>
+        <item name="strokeColor">@color/calendar_background</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="backgroundTint">@color/text_recycle</item>
+        <item name="iconTint">@color/light_blue_200</item>
+        <item name="android:textColor">@color/name_devices_appbar</item>
+    </style>
+
     <style name="ChipShiftSchedule" parent="ShiftScheduleChipStyle">
         <item name="android:fontFamily">@font/ru_hero</item>
         <item name="android:layout_width">wrap_content</item>
