--- a/app/src/main/res/layout/dialog_request_work_filter.xml
+++ b/app/src/main/res/layout/dialog_request_work_filter.xml
@@ -50,6 +50,7 @@
         android:text="@string/filter_request_work"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toStartOf="@+id/iv_exit"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
         app:layout_constraintTop_toTopOf="@+id/imageView6" />
@@ -70,7 +71,7 @@
         style="@style/TextViewStyleContent"
         android:layout_width="0dp"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
         android:text="@string/request_work_filter_dispatcher"
         android:textColor="@color/calendar_background"
