--- a/app/src/main/res/layout/dialog_request_work_sorted.xml
+++ b/app/src/main/res/layout/dialog_request_work_sorted.xml
@@ -41,6 +41,7 @@
         android:text="@string/sorted_request_work"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
         app:layout_constraintTop_toTopOf="@+id/imageView6" />
@@ -61,7 +62,7 @@
         style="@style/TextViewStyleContent"
         android:layout_width="0dp"
         android:layout_marginStart="96dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
         android:text="@string/sorted_date_open"
         android:textColor="@color/calendar_background"
