--- a/app/src/main/res/layout/dialog_request_work_filter.xml
+++ b/app/src/main/res/layout/dialog_request_work_filter.xml
@@ -22,8 +22,8 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageView6"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:src="@drawable/baseline_filter_list_alt_24"
@@ -33,8 +33,8 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_exit"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/baseline_close_24"
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:gravity="center"
         android:text="@string/filter_request_work"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toStartOf="@+id/iv_exit"
@@ -151,13 +151,15 @@
         android:id="@+id/tv_filter_all"
         style="@style/TextViewStyleContent"
         android:layout_width="0dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="24dp"
         android:text="@string/request_work_filter_all"
         android:textColor="@color/calendar_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_filter_chief_engineer"
-        app:layout_constraintTop_toBottomOf="@+id/linear" />
+        app:layout_constraintTop_toBottomOf="@+id/linear"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
