--- a/app/src/main/res/layout/fragment_shift_schedule_notes_list.xml
+++ b/app/src/main/res/layout/fragment_shift_schedule_notes_list.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="8dp"
         android:gravity="top"
         android:text="21.07.2024"
-        android:textColor="@color/orange_zero_vision"
+        android:textColor="#7AAACC"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="40dp"
         android:clickable="true"
         android:focusable="true"
         app:backgroundTint="@color/text_recycle"
@@ -37,7 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="32dp"
         app:srcCompat="@drawable/baseline_post_add_24"
-        app:tint="@color/name_devices_appbar" />
+        app:tint="@color/orange_zero_vision" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/iv_up_list_recycler_view"
@@ -55,7 +55,7 @@
         app:layout_constraintStart_toStartOf="@+id/iv_add_note"
         app:maxImageSize="32dp"
         app:srcCompat="@drawable/baseline_keyboard_double_arrow_up_24"
-        app:tint="@color/name_devices_appbar" />
+        app:tint="@color/orange_zero_vision" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_sorted"
@@ -65,7 +65,7 @@
         android:src="@drawable/baseline_sort_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDate"
-        app:tint="@color/orange_zero_vision" />
+        app:tint="#7AAACC" />
 
     <TextView
         android:id="@+id/tv_sorted"
@@ -87,7 +87,7 @@
         android:src="@drawable/baseline_filter_list_alt_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/iv_sorted"
-        app:tint="@color/orange_zero_vision" />
+        app:tint="#7AAACC" />
 
     <TextView
         android:id="@+id/tv_filter"
