--- a/app/src/main/res/layout/dialog_notes_notification.xml
+++ b/app/src/main/res/layout/dialog_notes_notification.xml
@@ -72,6 +72,7 @@
         android:id="@+id/tv_my_notes_notification"
         style="@style/TextViewStyleContent"
         android:layout_width="0dp"
+        android:paddingVertical="8dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
@@ -96,8 +97,9 @@
         android:id="@+id/tv_request_work_notification"
         style="@style/TextViewStyleContent"
         android:layout_width="0dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:paddingVertical="8dp"
         android:text="@string/request_work_notification"
         android:textColor="@color/calendar_background"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +110,7 @@
         android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:background="@color/text_recycle_smile"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
