--- a/app/src/main/res/layout/dialog_request_work_sorted.xml
+++ b/app/src/main/res/layout/dialog_request_work_sorted.xml
@@ -22,8 +22,8 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageView6"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:src="@drawable/baseline_sort_24"
@@ -35,15 +35,14 @@
         android:id="@+id/tvNameDialog"
         style="@style/TextViewStyleContent"
         android:layout_width="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="32dp"
         android:gravity="center"
         android:text="@string/sorted_request_work"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -64,6 +63,7 @@
         android:layout_marginStart="96dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
+        android:paddingVertical="8dp"
         android:text="@string/sorted_date_open"
         android:textColor="@color/calendar_background"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,8 +85,9 @@
         android:id="@+id/tv_sorted_date_close"
         style="@style/TextViewStyleContent"
         android:layout_width="0dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:paddingVertical="8dp"
         android:text="@string/sorted_date_close"
         android:textColor="@color/calendar_background"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,9 +109,10 @@
         android:id="@+id/tv_sorted_number"
         style="@style/TextViewStyleContent"
         android:layout_width="0dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="24dp"
+        android:paddingVertical="8dp"
         android:text="@string/sorted_number"
         android:textColor="@color/calendar_background"
         app:layout_constraintBottom_toBottomOf="parent"
