--- a/app/src/main/res/layout/dialog_request_work_filter.xml
+++ b/app/src/main/res/layout/dialog_request_work_filter.xml
@@ -72,7 +72,7 @@
         android:layout_width="0dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/request_work_filter_dispatcher"
         android:textColor="@color/calendar_background"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,8 +94,8 @@
         android:id="@+id/tv_filter_chief_engineer"
         style="@style/TextViewStyleContent"
         android:layout_width="0dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/request_work_filter_chief_engineer"
         android:textColor="@color/calendar_background"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,11 +117,13 @@
         android:id="@+id/tv_filter_other"
         style="@style/TextViewStyleContent"
         android:layout_width="0dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:paddingVertical="8dp"
         android:text="@string/requset_work_filter_other"
         android:textColor="@color/calendar_background"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_filter_chief_engineer"
         app:layout_constraintTop_toBottomOf="@+id/tv_filter_chief_engineer" />
 
